[gd_scene load_steps=4 format=3 uid="uid://ck2kkmqetqqfl"]

[ext_resource type="Script" path="res://scripts/slowing_tower.gd" id="1_5ogih"]
[ext_resource type="Texture2D" uid="uid://bwws8inua2vog" path="res://images/Mud puddle.jpg.webp" id="1_vokuw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_is1qv"]
size = Vector2(488, 284)

[node name="Slowing Tower" type="Area2D"]
collision_mask = 4
script = ExtResource("1_5ogih")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.692754, 1)
texture = ExtResource("1_vokuw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_is1qv")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
